JEP389 Foreign Linker API: DownCall (Phase 1 / Primitive support)
The prototype enables the downcall handle to the C function
for primitive types on X86_64 and Aarch64 by implementing a
lightweight ffi_call based solution in OpenJ9 to substitute
the counterpart APIs in OpenJDK.

Signed-off-by: Cheng Jin <jincheng@ca.ibm.com>